--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"lint": "turbo run lint",
 		"build": "buf generate && turbo run build",
 		"preview": "npm run build && turbo run preview",
-		"prepare": "husky && npm run lint && npm run format",
+		"local-prepare": "husky && npm run lint && npm run format",
 		"pre-commit": "npm run lint && npm run format"
 	},
 	"keywords": [],
