--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 		"@bufbuild/protobuf": "^2.5.2",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
+		"react-loading-indicators": "^1.0.1",
 		"react-router": "^7.8.2"
 	},
 	"devDependencies": {
@@ -19,6 +20,7 @@
 		"@tailwindcss/vite": "^4.1.17",
 		"@types/react": "^19.1.10",
 		"@types/react-dom": "^19.1.7",
+		"@types/react-loading-indicator": "^1.0.3",
 		"@vitejs/plugin-react": "^5.0.0",
 		"eslint": "^9.33.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
