--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
 		"express": "^5.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.20.0",
-		"uuid": "^13.0.0"
+		"uuid": "^13.0.0",
+		"zod": "^4.1.13"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.35.0",
