--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
 		"husky": "^9.1.7",
 		"prettier": "^3.6.2",
 		"turbo": "^2.5.6"
+	},
+	"dependencies": {
+		"react-hook-form": "^7.66.1",
+		"zod": "^4.1.13"
 	}
 }
