--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
 	"dependencies": {
 		"@bufbuild/protobuf": "^2.5.2",
 		"argon2": "^0.44.0",
+		"compression": "^1.8.1",
 		"cookie-parser": "^1.4.7",
 		"express": "^5.1.0",
+		"express-rate-limit": "^8.2.1",
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.20.0",
 		"uuid": "^13.0.0",
@@ -26,6 +28,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.35.0",
+		"@types/compression": "^1.8.1",
 		"@types/cookie-parser": "^1.4.9",
 		"@types/express": "^5.0.3",
 		"@types/jsonwebtoken": "^9.0.10",
