--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
 		"cookie-parser": "^1.4.7",
 		"express": "^5.1.0",
 		"express-rate-limit": "^8.2.1",
+		"helmet": "^8.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^9.1.2",
 		"zod": "^4.1.13"
