--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
 		"helmet": "^8.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^9.1.2",
+		"prom-client": "^15.1.3",
 		"zod": "^4.1.13"
 	},
 	"devDependencies": {
